<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inventory</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Items</string>

    <string name="editor_activity_title_new_item">Add an Item</string>

    <string name="editor_activity_title_edit_item">Edit Item</string>

    <string name="editor_update_item_successful">Item updated</string>

    <string name="editor_update_item_failed">Error with updating item</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="category_overview">Overview</string>

    <string name="category_name">Name</string>

    <string name="category_quantity">Quantity</string>

    <string name="category_supplier">Supplier</string>

    <string name="category_price">Price</string>

    <string name="category_phone">Supplier\'s phone number</string>

    <string name="hint_name">Name</string>

    <string name="hint_phone_number">Phone Number</string>

    <string name="hint_quantity">Quantity</string>

    <string name="hint_price">Price</string>

    <string name="price_currency">USD</string>

    <string name="supplier_unknown">Unknown</string>

    <string name="supplier_kvartett">Kvartett</string>

    <string name="supplier_meinl">Meinl</string>

    <string name="editor_insert_item_successful">Item saved</string>

    <string name="editor_insert_item_failed">Error with saving item</string>

    <string name="empty_view_title_text">We are out of stock.</string>

    <string name="empty_view_subtitle_text">Get started by adding an item.</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_item_successful">Item deleted</string>

    <string name="editor_delete_item_failed">Error with deleting item</string>

    <string name="delete_dialog_msg">Delete this item?</string>

    <string name="delete">Delete</string>

    <string name="call_supplier">Call Supplier</string>

    <string name="cancel">Cancel</string>

    <string name="product_view">Product Details</string>

    <string name="name_missing">Name is required!</string>

    <string name="quantity_missing">Quantity is required!</string>

    <string name="price_missing">Pirce is required!</string>

    <string name="supplier_missing">Select a supplier!</string>

    <string name="phone_missing">Supplier\'s phone number is required!</string>
</resources>
