<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.android.inventory.ProductViewActivity">


    <!-- Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                style="@style/CategoryLabel"
                android:text="@string/category_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/name_view_text"
                style="@style/ProductLabel" />

        </LinearLayout>
    </LinearLayout>


    <!-- Price in USD -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/ParticalSectionStyle">

            <TextView
                style="@style/CategoryLabel"
                android:text="@string/category_price" />
        </LinearLayout>

        <LinearLayout style="@style/ParticalSectionStyle">

            <TextView
                android:id="@+id/price_view_text"
                style="@style/ProductLabel" />

            <TextView
                style="@style/CurrencyStyle"
                android:layout_marginLeft="16dp"
                android:text="@string/price_currency" />
        </LinearLayout>
    </LinearLayout>


    <!-- Quantity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/ParticalSectionStyle">

            <TextView
                style="@style/CategoryLabel"
                android:text="@string/category_quantity" />
        </LinearLayout>

        <LinearLayout style="@style/ParticalSectionStyle">

            <TextView
                android:id="@+id/quantity_view_text"
                style="@style/ProductLabel" />

            <LinearLayout
                style="@style/ParticalSectionStyle"
                android:paddingLeft="16dp">

                <LinearLayout style="@style/ParticalSectionStyle">

                    <Button
                        android:id="@+id/increase_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@color/blue"
                        android:text="+"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout style="@style/ParticalSectionStyle">

                    <Button
                        android:id="@+id/decrease_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@color/blue"
                        android:text="-"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!-- Supplier -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/ParticalSectionStyle">

            <TextView
                style="@style/CategoryLabel"
                android:text="@string/category_supplier" />
        </LinearLayout>

        <LinearLayout style="@style/ParticalSectionStyle">

            <TextView
                android:id="@+id/supplier_name_view_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingRight="40dp" />
        </LinearLayout>
    </LinearLayout>


    <!-- Phone Number-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/ParticalSectionStyle">

            <TextView
                style="@style/CategoryLabel"
                android:text="@string/category_phone" />
        </LinearLayout>

        <LinearLayout style="@style/ParticalSectionStyle">

            <LinearLayout style="@style/ViewContainer">

                <TextView
                    android:id="@+id/supplier_phone_view_text"
                    style="@style/ProductLabel" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_button"
            style="@style/ButtonStyle"
            android:background="@color/blue"
            android:text="@string/delete" />

        <Button
            android:id="@+id/phone_button"
            style="@style/ButtonStyle"
            android:layout_marginLeft="10dp"
            android:background="@color/blue"
            android:focusable="false"
            android:text="@string/call_supplier" />

    </LinearLayout>

</LinearLayout>